force-app/main/default/objects/IssueRequest__c/IssueRequest__c.object-meta.xml
<CustomObject>
    <description>Object to track Salesforce change requests and issues</description>
    <label>Issue/Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Issue/Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues &amp; Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>