force-app/main/default/objects/IssueRequest__c/fields/Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Notes__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <description>Free-text area for additional notes for administrators</description>
    <label>Admin Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>