force-app/main/default/objects/IssueRequest__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculate open issues and requests&apos; age in days</description>
    <formula>IF(

AND(
OR(
ISPICKVAL(Status__c, &quot;Gathering Information&quot;),
ISPICKVAL(Status__c, &quot;Waiting for Approval&quot;),
ISPICKVAL(Status__c, &quot;In Development&quot;),
ISPICKVAL(Status__c, &quot;Testing&quot;),
ISPICKVAL(Status__c, &quot;In Final Review&quot;)
),
NOT(ISBLANK(Requested_Date__c))
),

TODAY() -  Requested_Date__c, null)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>