force-app/main/default/objects/IssueRequest__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <description>Date the project has been completed in a demo or sandbox, but has not yet been deployed.</description>
    <inlineHelpText>Once completed, advance status to Final Review.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>