force-app/main/default/objects/IssueRequest__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <description>Used to hold the date the issue/request has been approved, resolved, deployed.</description>
    <label>Resolution/Deployment Date</label>
    <type>Date</type>
</CustomField>