force-app/main/default/objects/IssueRequest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free-text field to provide additional details on the request</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>