force-app/main/default/objects/IssueRequest__c/fields/Escalated_to_Salesforce_Support__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Salesforce_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate any issues to be escalated to Salesforce for additional support</description>
    <label>Escalated to Salesforce Support</label>
    <type>Checkbox</type>
</CustomField>