force-app/main/default/objects/IssueRequest__c/fields/Last_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Date__c</fullName>
    <description>Last Approval Date from Decisions. Based on Approved Decisions only.</description>
    <label>Last Approval Date</label>
    <summarizedField>Decision__c.Resolution_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Decision__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed - Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Decision__c.Related_Issue_Request__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>