force-app/main/default/objects/IssueRequest__c/fields/Outstanding_Decisions__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Decisions__c</fullName>
    <description>Calculates the # of Outstanding Decisions/Approval Requests</description>
    <label># Outstanding Decisions</label>
    <summaryFilterItems>
        <field>Decision__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Decision__c.Related_Issue_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>