force-app/main/default/objects/IssueRequest__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Field to indicate which platform the change request affects</description>
    <label>System/Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Classic &amp; Lightning</fullName>
                <default>true</default>
                <label>Classic &amp; Lightning</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>3rd Party Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>