force-app/main/default/objects/IssueRequest__c/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <description>Identify the primary object or item this request affects</description>
    <label>Primary Object/Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Item</valueSetName>
    </valueSet>
</CustomField>