force-app/main/default/objects/IssueRequest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Identify the level of urgency for the request</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High - Affects immediate functionality</fullName>
            </value>
            <value>
                <fullName>Medium - Need to have</fullName>
            </value>
            <value>
                <fullName>Low - Nice to have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>