force-app/main/default/objects/IssueRequest__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason the request/issue was cancelled/rejected</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Resolved on its Own/User Resolved</fullName>
            </value>
            <value>
                <fullName>Workaround Identified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>