force-app/main/default/objects/IssueRequest__c/fields/Related_Issue_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related issue/request</description>
    <label>Related Issue/Request</label>
    <referenceTo>IssueRequest__c</referenceTo>
    <relationshipLabel>Related Issues &amp; Requests</relationshipLabel>
    <relationshipName>Issues_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>