force-app/main/default/objects/IssueRequest__c/fields/Request_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_by__c</fullName>
    <description>List of departments requests are submitted by</description>
    <label>Request Submitted by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Management (President, Vice Presidents)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>