force-app/main/default/objects/IssueRequest__c/fields/Roadblocks__c.field-meta.xml
<CustomField>
    <fullName>Roadblocks__c</fullName>
    <description>Text field to mention any roadblocks</description>
    <label>Roadblocks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>