force-app/main/default/objects/IssueRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Picklist field to track current status of request</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gathering Information</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>In Final Review</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <label>Deployed/Resolved</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <label>Backlogged/Deferred</label>
            </value>
            <value>
                <fullName>Rejected/Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>