force-app/main/default/objects/IssueRequest__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>free-text field to provide the request subject/topic</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>