force-app/main/default/objects/IssueRequest__c/fields/Testing_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_Completed_Date__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <description>Date when testing is completed. Automatically updated when moved to next stage if previous stage is testing</description>
    <inlineHelpText>If a testing date is entered, please enter a completed date once the project has been completed and ready for a final review.</inlineHelpText>
    <label>Testing Completed Date</label>
    <type>Date</type>
</CustomField>