force-app/main/default/objects/IssueRequest__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>App Management</fullName>
            </value>
            <value>
                <fullName>Automation &amp; Logic</fullName>
            </value>
            <value>
                <fullName>CRM Management</fullName>
            </value>
            <value>
                <fullName>Dashboards &amp; Reports</fullName>
            </value>
            <value>
                <fullName>Database Management</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Security &amp; Roles</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Visualforce &amp; User Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>