force-app/main/default/objects/IssueRequest__c/fields/Web_Page_Reference__c.field-meta.xml
<CustomField>
    <fullName>Web_Page_Reference__c</fullName>
    <description>URL field to provide Salesforce URL or related URL</description>
    <label>Web Page Reference</label>
    <type>Url</type>
</CustomField>