force-app/main/default/objects/IssueRequest__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General issues and requests</description>
    <label>General</label>
</RecordType>