force-app/main/default/objects/IssueRequest__c/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <description>Salesforce issues and customization requests</description>
    <label>Salesforce</label>
</RecordType>