force-app/main/default/objects/IssueRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Requested_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>